# fedlexplorer

./: Dockerfile  LICENSE  LICENSE-APACHE  README.md  k8s.yml
backend/: .gitignore  README.md  fedlexrdf.py  pyproject.toml  refresh.py  requirements.txt  server.py  termdatapi.py
data/: datapackage.json  inkraftquery.sparql  inkrafttretten.json  inkrafttretten.sparql  legalTopics.json  legalTopics.sparql  sample.json  sample.sparql
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/fedlexplorer/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: completed-sample.dart  form_view.dart  main.dart  main_app.dart  results.dart  results_view.dart  utilities.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner/: Info.plist
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/test/data/: query.json  topics.json
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
