[tool.poetry]
name = "fedlexplorer"
version = "0.1.0"
description = "Open Legal Lab Fedlex App"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5,<4"
falcon = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
