[tool.poetry]
name = "fedlexplorer"
version = "0.1.0"
description = "OpenLegalLab Fedlex App"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
falcon = "^3.1.1"
frictionless = "^4"
orjson = "^3.8.11"
sparqlwrapper = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
