[tool.poetry]
name = "fedlexplorer"
version = "0.2.0"
description = "OpenLegalLab Fedlex App"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
falcon = "^3"
frictionless = "^4"
orjson = "^3"
sparqlwrapper = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
